--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{"src": "./index.ejs","use": "@vercel/node"}],
+  "builds": [{"src": "./app.js","use": "@vercel/node"}],
   "routes": [{"src": "/(.*)", "dest": "/"}]
 }
