--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "./app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/app.js"
     }
-  ],
-  "functions": {
-    "app.js": {
-      "includeFiles": "views/**"
-    }
-  }
+  ]
 }
