--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-     "node": "20.x"
+    "node": "20.x"
   },
   "scripts": {
     "start": "node app.js",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3"
